# PolyAnalyzer

./: .gitignore  BUILD_README.md  CLI_USAGE.md  CLI_USAGE_EN.md  CONTEXT.md  DEV_TOOLS.md  GPCtoPic.spec  LICENSE  MANUAL.md  OPTIMIZATION_REPORT.md  PolyAnalyzer.spec  README.md  README_EN.md  build.ps1  build.sh  cnames.py  i18n.py  main-1.py  main.py  package.json  package_windows.sh  pnpm-lock.yaml  release.sh  requirements.txt  run_main.py  ui.py  vite.config.ts
.claude/skills/polyanalyzer-cli/: SKILL.md
.github/workflows/: build.yml
python/: api.py  build_sidecar.py  cli.py  main.py  requirements.txt
python/analyzer/: __init__.py  base.py  cnames.py  dsc.py  gpc.py  ir.py  mw.py  plotting.py
python/analyzer/setting/: defaultDSCSetting.ini  defaultSetting.ini
python/legacy/: main_original.py
python/tests/: test_analyzer_safety.py  test_api_protocol.py  test_cli_packaging_security.py
setting/: defaultIRSetting.ini  defaultSetting.ini
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: polyanalyzer-engine-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/common/: ProgressBar.tsx  SettingsPanel.tsx
src/components/dsc/: DscPanel.tsx
src/core/: analysisProfiles.ts  serialQueue.test.ts  serialQueue.ts
src/hooks/: useAnalysisProfiles.test.ts  useAnalysisProfiles.ts  useAnalyzerFiles.ts  usePythonBridge.ts
src/i18n/: en_US.json  index.ts  zh_CN.json
src/stores/: analysisStore.ts  settingsStore.ts
src/types/: rpc.ts
(+5 files in other folders)
