[package]
name = "polyanalyzer"
version = "2.0.0"
description = "Polymer Analyzer - GPC, Mw, DSC Analysis Tool"
authors = ["Frank"]
edition = "2021"

[lib]
name = "polyanalyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

