[package]
name = "polyanalyzer"
version = "2.2.1"
description = "Polymer Analyzer - GPC, Mw, DSC, and IR Analysis Tool"
authors = ["Frank"]
edition = "2021"

[lib]
name = "polyanalyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
